homelab/services/_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: services
  labels:
    discovery.solo.io/function_discovery: enabled
