homelab/services/bitwarden.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bitwardenrs
  namespace: services
spec:
  routes:
    - kind: Rule
      match: Host(`bitwarden.kyleculp.com`)
      services: 
      - kind: Service
        name: whoami
        namespace: services
        passHostHeader: true
        weight: 10
        port: 80
  tls:
    secretName: kyleculp-tls
